Done with create ID

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,10 +13,10 @@
 @import "~@fortawesome/fontawesome-free/scss/solid.scss";
 @import "~@fortawesome/fontawesome-free/scss/brands.scss";
 
-.router-link-exact-active {
-    background-color: lighten(#343a40, 10%) !important;
-    color: white !important;
-}
+// .router-link-exact-active {
+//     background-color: lighten(#343a40, 10%) !important;
+//     color: white !important;
+// }
 
 .main-sidebar {
     z-index: 0;
